Deploy configuratioins. Text wrapping bug fixed.

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,9 +4,6 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* position: sticky;
-    top: 0px;
-    z-index: 1; */
   }
   
   header p.header-text {
